--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,13 @@
 }
 
 .game-board {
-  width: 80%;
+  width: 100%;
   height: 500px;
-  border: 1px solid #333;
+  border-bottom: 15px solid #333;
   margin: 0 auto;
   position: relative;
   overflow: hidden;
+  background: linear-gradient(#87CEEB, #E0F6FF);
 }
 
 /* MARIO */
@@ -43,6 +44,22 @@
 
   100% {
     bottom: 0;
+  }
+}
+
+.clouds {
+  position: absolute;
+  width: 550px;
+  animation: clouds-animation 20s infinite linear;
+}
+
+@keyframes clouds-animation {
+  from {
+    right: -550px;
+  }
+
+  to {
+    right: 100%;
   }
 }
 
